Updates from Overleaf

--- a/overview.tex
+++ b/overview.tex
@@ -40,13 +40,13 @@ It is in this context that DOE CMS Software Center for Nonperturbative Studies o
 
 As of June 2021, the RT-TDDFT software named INQ, whose basic functions are necessary for calculating ground state electronic structure as well as its time propagation have been successfully implemented. 
 Rigorous tests for scientific research such as reproducibility of relevant physical quantities have been being performed based on comparisons with well established DFT (Quantum Espresso/Qbox) and TDDFT (Octopus/Qb@ll) codes. 
-GPU optimization has been successfully performed together with MPI parallel implementation, where software design ({\bf Correa}), development ({\bf Andrade}) and testing ({\bf Pemmaraju}) effort were closely coordinated with the PI {\bf Ogitsu}'s oversight, fully leveraging extensive online meetings (two two-hours meeting per week). 
+GPU optimization has been successfully performed together with MPI parallel implementation, where software design ({\bf Correa}), development ({\bf Andrade}) and testing ({\bf Pemmaraju}) effort were closely coordinated with the PI {\bf Ogitsu}'s oversight, fully leveraging extensive online meetings (two 2-hour meetings per week). 
 \emph{
 	We have successfully executed our software development plan: INQ has now achieved excellent parallel performance using multiple GPUs with a standard DFT (GGA) based on band parallelization scheme. 
 	The comprehensive report about the INQ code and its future extension plan has been summarized and submitted to a peer-reviewed journal. \cite{andrade2021inq}
 }
 
-Currently existing GPU-ready (TD)DFT codes are mostly focused on delivering GPU parallel performance only for specific types of simulations such as, hybrid exchange-correlation (BigDFT)\cite{BigDFT2018} and GW calculations (VASP),\cite{vasp2012,vasp2012b,vasp2018,vasp2019} CCSD (NWChem),\cite{NWChem2013} which have intrinsically high arithmetic intensity, or k-point parallelization (QE)\cite{QE2017,QE2020} that requires less MPI communication compared to band/grid parallelization. 
+Currently existing GPU-ready (TD)DFT codes are mostly focused on delivering GPU parallel performance only for specific types of simulations such as, hybrid exchange-correlation (BigDFT) \cite{BigDFT2018} and GW calculations (VASP),\cite{vasp2012,vasp2012b,vasp2018,vasp2019} CCSD (NWChem),\cite{NWChem2013} which have intrinsically high arithmetic intensity, or k-point parallelization (QE)\cite{QE2017,QE2020} that requires less MPI communication compared to band/grid parallelization. 
 Note that (TD)DFT simulation of realistic system often requires large systems in order to take relevant factors, such as defects and interface, to material property (or device performance), and in this case, band and grid parallel become more important than k-point parallel in minimizing time to solution. 
 At the time of writing this report, only real space (TD)DFT codes\cite{andrade2012time,andrade2013real,SparcX2021} in GGA level simulations are able to take advantage of the computing power of GPU suggesting that lack of interconnect bandwidth may be the root of above observation since parallel 3D-FFT is known to demand high memory and interconnect bandwidths.\cite{heFFTe2020}
 
