--- a/development.tex
+++ b/development.tex
@@ -9,7 +9,7 @@
         \item user metric where available,
         
         \item citations of the accompanying publication of new software releases.
-        \item Links to software and database download sites should be provided in separate spreadsheet (see below).
+        \item Links to software and database download sites should be provided in  \textcolor{red}{separate spreadsheet} (see below).
         \item Also describe any unique shared facilities (including national user facilities) that have been or will be used for the project, including ALCC or INCITE awards.
     \end{enumerate}    
 \end{itemize}
@@ -28,23 +28,21 @@ There is a count of more than 94 issues open so far, including comments, bug rep
 The wiki includes about 20 documents, including a initial version of the developers guide, and notes about HPC systems.
 
 The gitlab NPNEQ hub contains component libraries, such as \textsc{Multi}, \textsc{B.MPI3}.
-These two libraries in particular are used by the QMCPACK, showing how synergistic the modern development spearheaded by NPNEQ can benefit other projects.
+These two libraries in particular are used by the QMCPACK codebase (DOE's sponsored Quantum Montecarlo code), showing how synergistic the modern development spearheaded by NPNEQ can benefit other projects.
 
-Grand Challenge 
-
-Outreach summer school director, two students.
-
-QMCPACK library
-
-
-
-
-Talk about libraries used by QMCPACK also. interaction with other projects
-
+NPNEQ was awarded with special computer allocation during the competitive 15th
+Institutional Unclassified Computing Grand Challenge (GC) Program.
+LLNL's GC competition is similar to DOE's INCITE program, except that it awards time for Livermore Computer Facility (Lassen in this case).
 
 Outreach activities include the organization of a symposium at the 2021 Molecular Foundry Annual User meeting (August 19-20, 2021). 
 The symposium, entitled ``Non-Equilibrium and Non-Perturbative Experimental and Theoretical Methods for Dynamical Science'', aims to survey recent progress in manipulation, measurement, and simulation of non-equilibrium dynamics.
 Alongside the symposium organization, the \textsc{inq} team will also be presenting a tutorial-style introduction to the code during the Molecular Foundry User Meeting, as a way to introduce the code to the electronic structure community.
+
+Finally, we are taking advantage of the LLNL's sponsored Computational Chemistry \& Materials Science Summer Institute 2021 (CCMS).
+CCMS is an intership program attracting about a dozen top students in the area of material.
+This year one of our members (\bf Correa) is director of this program.
+Invited lecturers include Hardy Gross, one of the pionners of TDDFT.
+Two graduate students (Yifan Yao, Univ. of Illinois Urbana and Rijul Chauhan from Texas A\&M) were accepted to perform \textsc{inq}'s related wotk.
 
 \clearpage
 
