figure size by side

--- a/research.tex
+++ b/research.tex
@@ -260,13 +260,25 @@ Scalability of the \textsc{inq} code will enable these calculations in challengi
 
 \begin{figure}[h]
 	\centering
-	\fbox{\includegraphics[width=0.45\textwidth]{figures/defect_passivation}}
-	\fbox{\includegraphics[width=0.45\textwidth]{figures/stopping_eph}}
-	\caption{
-		Schematic atomic structure of defects at the surface of \(\mathrm{CsPbBr_3}\), which are susceptible to non-radiative recombination when unpassivated (left), but become less detrimental to radiative recombination when passivated (right).
-	}
-	\label{fig:defect}
+	\begin{minipage}[b]{.45\textwidth}
+		\centering
+		\includegraphics[width=0.99\textwidth]{figures/defect_passivation} 
+		\caption{
+			Schematic atomic structure of defects at the surface of \(\mathrm{CsPbBr_3}\), which are susceptible to non-radiative recombination when unpassivated (left), but become less detrimental to radiative recombination when passivated (right).
+			\label{fig:defect}
+		}
+	\end{minipage}
+	~
+	\begin{minipage}[b]{.45\textwidth}
+		\centering
+		\includegraphics[width=0.8\textwidth]{figures/stopping_eph}    \\
+		\caption{
+			Schematic atomic structure of defects at the surface of \(\mathrm{CsPbBr_3}\), which are susceptible to non-radiative recombination when unpassivated (left), but become less detrimental to radiative recombination when passivated (right).
+			\label{fig:defect}
+		}
+	\end{minipage}
 \end{figure}
+
 % \begin{figure}
 % \centering
 
