Updates from Overleaf

--- a/research.tex
+++ b/research.tex
@@ -379,17 +379,17 @@ In antiferromagnets, electron exchange interactions result in antiparallel or no
 Given their low-loss, intrinsic THz frequencies, and insensitivity to stray fields, antiferromagnetic spintronics holds great potential in realizing high-speed communications and new types of information storage technologies. 
 Atomically-thin van der Waals crystals like \(\mathrm{FePS_3}\), \(\mathrm{NiPS_3}\) and \(\mathrm{MnPS_3}\) represent a new type of antiferromagnetic materials class with strong 2D quantum confinement and the ability to tune this functionality at high speed and with low energy cost taking advantage of the weak interlayer van der Waals bond.
 In initial work we have carried out time domain THz emission spectroscopy probing the ultrafast dynamics of the magnetization in exfoliated flakes of \(\mathrm{NiPS_3}\).
-In these experiments an ultrafast optical pump pulse excites above band gap at \(400~\mathrm{nm}\) to create free carriers which then couple to the intrinsic magnetization of the material.
+% In these experiments an ultrafast optical pump pulse excites above band gap at \(400~\mathrm{nm}\) to create free carriers which then couple to the intrinsic magnetization of the material.
 By detecting the emitted THz fields from the sample, we probe the time-dependent free (associated with the flow of electrons) and bound (associated with the time-dependent magnetization) currents.
-Following directly from Maxwell’s equations one finds: 
+% Following directly from Maxwell’s equations one finds: 
 
-\begin{equation}
-\mathbf{E}_\text{THz} \propto \frac{\partial\mathbf{J}}{\partial t} + \frac{\partial}{\partial t} (\nabla \times \mathbf{M})
-\end{equation}
-where \(\mathbf{J}\) is the free current and \(\mathbf{M}\) is magnetization. 
+% \begin{equation}
+% \mathbf{E}_\text{THz} \propto \frac{\partial\mathbf{J}}{\partial t} + \frac{\partial}{\partial t} (\nabla \times \mathbf{M})
+% \end{equation}
+% where \(\mathbf{J}\) is the free current and \(\mathbf{M}\) is magnetization. 
 Fig.~\ref{fig:NiPS3} shows the experimentally measured THz waveform and the peak-to-peak emission amplitude as a function of temperature, showing an enhancement at the Neel temperature.
-This demonstrates the sensitivity of the measurement to the intrinsic antiferromagnetic dynamics.
-Further, by measuring the polarization state of the emitted THz fields one can extract information about the crystallographic directions of the associated currents.
+% This demonstrates the sensitivity of the measurement to the intrinsic antiferromagnetic dynamics.
+% Further, by measuring the polarization state of the emitted THz fields one can extract information about the crystallographic directions of the associated currents.
 We find there are two contributions to the measured fields, involving a current normal to the sample surface associated with the separation of electrons and holes at the surface superposed on a bound current likely associated with an induced rotation of the initially in-plane antiferromagnetic magnetization state.
 Further spectral analysis of the emitted fields may allow us to extract information about particular magnons associated with the light-induced response.
 This work opens up new possibilities for controlling the properties of antiferromagnetic materials on ultrafast time-scales. 
@@ -406,14 +406,14 @@ Ongoing work additionally involves upcoming experiments at the SLAC National Acc
 
 In conjunction with this experimental work, {\bf Tan} and {\bf Pemmaraju} are investigating a number of theoretical approaches to this problem.
 First, static, first-principles density functional theory are used to solve for the electronic structure, phononic properties, and electron-phonon interactions of the \(\mathrm{NiPS_3}\) materials system. 
-Second, the RT-TDDFT approach will be used to directly simulate density and spin fluctuations in time using the \textsc{inq} code.
+Second, the RT-TDDFT approach will be used to directly simulate density and spin fluctuations in time using the \textsc{INQ} code.
 The evolution of the calculated diffraction intensities of the spin, charge and orbital patterns will provide dynamics of the order parameters to assist the experimental time-resolved diffraction study.
 Trajectories will be examined to understand the structural and electronic mechanisms behind the evolution of spin order peaks, and their associated time scales. 
-Finally, the RT-TDDFT simulations will provide data for parameterization of a model for long-wavelength magnon simulations. 
-This semi-classical approach involves the construction of an effective spin Hamiltonian consisting of Zeeman, exchange and anisotropic magnetic interactions, with parameters extracted from the \textsc{inq} code. 
-This Hamiltonian will be solved for large magnetic supercell to produce the spin-wave dispersions. 
-Development of this model will be accelerated by the team's recent experience with similar models for 2D TMDCs and manganites~\cite{Siddiqui2020, Rajpurohit2020}. 
-As a by-product of this work, the \textsc{inq} code will contain an interface that will facilitate user extraction of parameters for model simulations.
+Finally, the RT-TDDFT simulations will provide data for parameterization of a model for long-wavelength magnon simulations developed by \textbf{PD Rajpurohit} and \textbf{PI Tan}. 
+% This semi-classical approach involves the construction of an effective spin Hamiltonian consisting of Zeeman, exchange and anisotropic magnetic interactions, with parameters extracted from the \textsc{inq} code. 
+% This Hamiltonian will be solved for large magnetic supercell to produce the spin-wave dispersions. 
+% Development of this model will be accelerated by the team's recent experience with similar models for 2D TMDCs and manganites~\cite{Siddiqui2020, Rajpurohit2020}. 
+% As a by-product of this work, the \textsc{inq} code will contain an interface that will facilitate user extraction of parameters for model simulations.
 
 \subsubsection{Demagnetization in optically excited perovskite nickelates}
 
