Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -85,6 +85,7 @@
 \input{organization_chart}
 \input{budget}
 \input{overview}
+% \input{hpc_architecture_and_performance}
 \input{research}
 \input{management}
 \input{development}
