--- a/research.tex
+++ b/research.tex
@@ -274,7 +274,7 @@ Scalability of the \textsc{inq} code will enable these calculations in challengi
 		\includegraphics[width=0.8\textwidth]{figures/stopping_eph}    \\
 		\caption{
 			Schematic atomic structure of defects at the surface of \(\mathrm{CsPbBr_3}\), which are susceptible to non-radiative recombination when unpassivated (left), but become less detrimental to radiative recombination when passivated (right).
-			\label{fig:defect}
+			\label{fig:stopping_eph}
 		}
 	\end{minipage}
 \end{figure}
